--- a/sparksql.ipynb
+++ b/sparksql.ipynb
@@ -20,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession"
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, DoubleType"
    ]
   },
   {
@@ -655,8 +656,435 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "6fb327a4-6a20-4929-972f-195712380ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = sc.textFile(\"empData.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "db93b989-07d7-463e-b936-c7155654abb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "splitFile = file.map(lambda x: x.split(\",\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "88f3f1c4-6d4f-4207-a7cf-05c1569ead2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = splitFile.toDF()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8eacd3b9-9288-4838-9e96-2d21bb705465",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+-----+\n",
+      "|  _1|     _2|   _3|\n",
+      "+----+-------+-----+\n",
+      "|1000|  Gopal|12000|\n",
+      "|1001|Krishna|14000|\n",
+      "|1002|   Ravi|16000|\n",
+      "|1002|  Ramya|24000|\n",
+      "|1003| Rakesh|34000|\n",
+      "|1004| Rajesh|22000|\n",
+      "|1005|Mounika|24000|\n",
+      "|1006| Sravya|26000|\n",
+      "|1007|   Siya|24000|\n",
+      "|1008| Bhavya|30000|\n",
+      "|1009|Trinath|34000|\n",
+      "+----+-------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a429a09a-4e69-4459-87bc-f7b7c0f6e87f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mappingFile = splitFile.map(lambda x: (int(x[0].strip()) if x[0].strip().isdigit() else 0,\n",
+    "                                       x[1].strip(),\n",
+    "                                       int(x[2].strip()) if x[2].strip().isdigit() else 0)) #strip function is used to remove the extra spaces in the id and salary column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f0a3e721-38a5-4279-9316-88b9c9186db1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema = StructType([\n",
+    "    StructField(\"id\", IntegerType(), True),\n",
+    "    StructField(\"name\", StringType(), True),\n",
+    "    StructField(\"sal\", IntegerType(), True)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f2206e06-ed24-4b69-8231-84b6cff935ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = spark.createDataFrame(mappingFile, schema=schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "70921c38-89d0-4f51-86cd-eac5ac36f9f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- id: integer (nullable = true)\n",
+      " |-- name: string (nullable = true)\n",
+      " |-- sal: integer (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "99a03063-598b-4b74-9797-c19ac89f532b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+-----+\n",
+      "|  id|   name|  sal|\n",
+      "+----+-------+-----+\n",
+      "|1000|  Gopal|12000|\n",
+      "|1001|Krishna|14000|\n",
+      "|1002|   Ravi|16000|\n",
+      "|1002|  Ramya|24000|\n",
+      "|1003| Rakesh|34000|\n",
+      "|1004| Rajesh|22000|\n",
+      "|1005|Mounika|24000|\n",
+      "|1006| Sravya|26000|\n",
+      "|1007|   Siya|24000|\n",
+      "|1008| Bhavya|30000|\n",
+      "|1009|Trinath|34000|\n",
+      "+----+-------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "bde84cbf-2738-47dc-a43e-98df2b534b8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.registerTempTable(\"empTable\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5fe861dc-b8c5-4d45-a5e4-538383b53810",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----------+-----------+\n",
+      "|namespace| tableName|isTemporary|\n",
+      "+---------+----------+-----------+\n",
+      "|         |  emptable|       true|\n",
+      "|         | newnumtab|       true|\n",
+      "|         |newnumtab1|       true|\n",
+      "|         |  numtable|       true|\n",
+      "+---------+----------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"show tables\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "bd388aef-2a22-4f8f-b45c-6c9119a8150b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+-----+\n",
+      "|  id|   name|  sal|\n",
+      "+----+-------+-----+\n",
+      "|1003| Rakesh|34000|\n",
+      "|1006| Sravya|26000|\n",
+      "|1008| Bhavya|30000|\n",
+      "|1009|Trinath|34000|\n",
+      "+----+-------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"select * from emptable where sal > 24000\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "a7726aba-3ab6-4fd9-a834-4119da38d0e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file1 = sc.textFile(\"AccountDetails.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3a0ca1d4-efa4-48fa-a556-e25f46f55c19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "splitFile =  file1.map(lambda x: x.split(\",\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "afac4a37-b537-4d41-bf58-4930982aa47c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema = StructType([\n",
+    "    StructField(\"accId\", IntegerType(), True),\n",
+    "    StructField(\"accHoldName\", StringType(), True),\n",
+    "    StructField(\"typeOfAcc\", StringType(), True),\n",
+    "    StructField(\"bank\", StringType(), True),\n",
+    "    StructField(\"amount\", DoubleType(), True),    \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e664b150-25fa-4855-86b3-b99e9084e0b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mappingFile = splitFile.map(lambda x: (int(x[0].strip()) if x[0].strip().isdigit() else 0,\n",
+    "                                       x[1],\n",
+    "                                       x[2],\n",
+    "                                       x[3],\n",
+    "                                       float(x[4].strip()) if x[4].strip().isdigit() else 0.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "e2387c5c-5dab-48ef-b7b5-b7bfc8cdf491",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = spark.createDataFrame(mappingFile, schema=schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "e5c12fc2-5160-4076-8dbc-0ba040d5f524",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- accId: integer (nullable = true)\n",
+      " |-- accHoldName: string (nullable = true)\n",
+      " |-- typeOfAcc: string (nullable = true)\n",
+      " |-- bank: string (nullable = true)\n",
+      " |-- amount: double (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "f251eaf9-05c1-48ff-88aa-832d6aee780a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+-----------+---------+-----+-------+\n",
+      "|accId|accHoldName|typeOfAcc| bank| amount|\n",
+      "+-----+-----------+---------+-----+-------+\n",
+      "|10101|      Gopal|  Savings|ICICI|50000.0|\n",
+      "|10201|    Krishna|  Current|  SBI|56000.0|\n",
+      "|10301|       Ravi|  Savings| HDFC|67000.0|\n",
+      "|20201|      Ramya|  Savings|  SBI|89000.0|\n",
+      "|30303|      Radha|    Fixed|ICICI|56000.0|\n",
+      "|50607|      Sruth|  Current| AXIS|45000.0|\n",
+      "|70007|     Nalini|    Fixed| HDFC|66000.0|\n",
+      "|33333|        Raj|  Savings| AXIS|59500.0|\n",
+      "|20201|      Ramya|  Savings|  SBI|89000.0|\n",
+      "|55303|     Rakhee|    Fixed|ICICI|56000.0|\n",
+      "|50607|   Santhosh|  Current| AXIS|45000.0|\n",
+      "|88007|     Nandha|    Fixed| HDFC|65900.0|\n",
+      "|44333|        Raj|  Savings|  SBI|79500.0|\n",
+      "|10101|      Gopal|  Savings|ICICI|50000.0|\n",
+      "|10201|    Krishna|  Current|  SBI|56000.0|\n",
+      "|10301|       Ravi|  Savings| HDFC|67000.0|\n",
+      "|20201|      Ramya|  Savings|  SBI|89000.0|\n",
+      "|30303|      Radha|    Fixed|ICICI|56000.0|\n",
+      "|50607|      Sruth|  Current| AXIS|45000.0|\n",
+      "|70007|     Nalini|    Fixed| HDFC|66000.0|\n",
+      "+-----+-----------+---------+-----+-------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "89e4ffd1-539d-4e80-b739-0dad712b4d5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['accId', 'accHoldName', 'typeOfAcc', 'bank', 'amount']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "5aa58b1c-3c17-4ac1-a146-04bd180f27b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.registerTempTable(\"AccData\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "c7e3384a-1fa3-4640-b8a4-8172bf2a896d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----------+-----------+\n",
+      "|namespace| tableName|isTemporary|\n",
+      "+---------+----------+-----------+\n",
+      "|         |   accdata|       true|\n",
+      "|         |  emptable|       true|\n",
+      "|         | newnumtab|       true|\n",
+      "|         |newnumtab1|       true|\n",
+      "|         |  numtable|       true|\n",
+      "+---------+----------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"show tables\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "f458c6d1-987e-415c-af5a-3a85429c463a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+--------+\n",
+      "| bank|count(1)|\n",
+      "+-----+--------+\n",
+      "| AXIS|       5|\n",
+      "| HDFC|       5|\n",
+      "|  SBI|       6|\n",
+      "|ICICI|       5|\n",
+      "+-----+--------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"select bank, count(*) from AccData group by bank\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "811d8a3b-fb81-450f-87f2-fe54a528d654",
    "metadata": {},
    "outputs": [],
    "source": []
