--- a/1.ipynb
+++ b/1.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = sc.textFile(\"file:///C://Users/aksha/Pyspark/Input.log\") \n",
+    "file = sc.textFile(\"file:///C:/Users/aksha/Pyspark/Input.log\") \n",
     "#If the specified path is wrong still it doesnt throw error. Only at the action level it \n",
     "# throws error because spark follows bottom top approach that means only when action is triggered then only it throws error if the file doesnt exist \n",
     "# in the specified path'''\n"
@@ -1335,7 +1335,9 @@
    "cell_type": "code",
    "execution_count": 71,
    "id": "013d689a-003b-4058-9605-82bd153be0a0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1728,9 +1730,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11 (PySpark)",
+   "display_name": "PySpark 3.11",
    "language": "python",
-   "name": "python311"
+   "name": "pyspark3.11"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1742,7 +1744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
