--- a/Sparksql4.ipynb
+++ b/Sparksql4.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "e42c2c69-0578-48ca-bb4e-7958c6e48b69",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import SparkSession, Row\n",
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, DoubleType\n",
-    "from pyspark.sql.functions import col, max, min, sum, mean\n"
+    "from pyspark.sql.functions import col, max, min, sum, mean, explode\n"
    ]
   },
   {
@@ -554,37 +554,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "38ff6e5f-187a-4996-b537-31a3962fdfbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.createOrReplaceTempView (\"textTab\")"
+    "df.createOrReplaceTempView(\"textTab\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "3c967196-b8af-497a-8d68-58f3e73f35b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.createOrReplaceTempView(\"parquettab\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3c967196-b8af-497a-8d68-58f3e73f35b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.createOrReplaceTempView (\"parquettab\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "7fdb4808-c3fa-4798-bdcc-73baad2a4885",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.sql(\"select    from textTab t\")"
+    "#spark.sql(\"select    from textTab t\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "4e681f09-546f-4c94-a719-4534a81d47c8",
    "metadata": {},
    "outputs": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "id": "c60bdd42-8869-41a8-bab2-afc4e7351383",
    "metadata": {},
    "outputs": [
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 38,
    "id": "cdebcf27-a141-4a09-a174-18d3bee5418f",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 39,
    "id": "e3d10db2-f4db-4b36-8ce2-80657a4bd1a3",
    "metadata": {},
    "outputs": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "id": "090a9486-ac7f-48e4-b072-7b34305714ba",
    "metadata": {},
    "outputs": [
@@ -742,8 +742,422 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "4b23b9ef-8c74-4b67-9a2c-90aad7b88367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datadf = spark.read.json(\"file:///C:/Users/aksha/Pyspark/ComplexJsonData.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "899d58fc-294d-4ead-9134-03c7544a8fae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# withColumn returns a new DataFrame with an added column, typically after performing a column operation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "eaf20429-8cc3-42bf-8abe-e9828c9aeab1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- instid: long (nullable = true)\n",
+      " |-- instname: string (nullable = true)\n",
+      " |-- inststatus: string (nullable = true)\n",
+      " |-- pathdet: array (nullable = true)\n",
+      " |    |-- element: struct (containsNull = true)\n",
+      " |    |    |-- docid: long (nullable = true)\n",
+      " |    |    |-- enddate: string (nullable = true)\n",
+      " |    |    |-- plnstid: long (nullable = true)\n",
+      " |    |    |-- startdate: string (nullable = true)\n",
+      " |    |    |-- username: string (nullable = true)\n",
+      " |    |    |-- workitemid: long (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "datadf.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3d414836-76c0-457c-ad33-b41b16e4e211",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+---------------+----------+--------------------+\n",
+      "|instid|       instname|inststatus|             pathdet|\n",
+      "+------+---------------+----------+--------------------+\n",
+      "| 12345|789654123125485|  Released|[{52312, 2017-12-...|\n",
+      "| 12347|789654123135452|   Pending|[{52315, 2017-12-...|\n",
+      "+------+---------------+----------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "datadf.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "7a83a7e4-e5c4-4e03-a75f-dac9c62087a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfdata1 = datadf.withColumn(\"pathdet1\",explode(col(\"pathdet\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "18ff4fe4-ed17-4475-b98f-7c1b073b969d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- instid: long (nullable = true)\n",
+      " |-- instname: string (nullable = true)\n",
+      " |-- inststatus: string (nullable = true)\n",
+      " |-- pathdet: array (nullable = true)\n",
+      " |    |-- element: struct (containsNull = true)\n",
+      " |    |    |-- docid: long (nullable = true)\n",
+      " |    |    |-- enddate: string (nullable = true)\n",
+      " |    |    |-- plnstid: long (nullable = true)\n",
+      " |    |    |-- startdate: string (nullable = true)\n",
+      " |    |    |-- username: string (nullable = true)\n",
+      " |    |    |-- workitemid: long (nullable = true)\n",
+      " |-- pathdet1: struct (nullable = true)\n",
+      " |    |-- docid: long (nullable = true)\n",
+      " |    |-- enddate: string (nullable = true)\n",
+      " |    |-- plnstid: long (nullable = true)\n",
+      " |    |-- startdate: string (nullable = true)\n",
+      " |    |-- username: string (nullable = true)\n",
+      " |    |-- workitemid: long (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfdata1.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "95f73aaf-7862-4c53-a341-9e5304efa5bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+---------------+----------+--------------------+--------------------+\n",
+      "|instid|       instname|inststatus|             pathdet|            pathdet1|\n",
+      "+------+---------------+----------+--------------------+--------------------+\n",
+      "| 12345|789654123125485|  Released|[{52312, 2017-12-...|{52312, 2017-12-0...|\n",
+      "| 12345|789654123125485|  Released|[{52312, 2017-12-...|{52312, 2017-12-0...|\n",
+      "| 12345|789654123125485|  Released|[{52312, 2017-12-...|{52312, 2017-12-0...|\n",
+      "| 12347|789654123135452|   Pending|[{52315, 2017-12-...|{52315, 2017-12-0...|\n",
+      "| 12347|789654123135452|   Pending|[{52315, 2017-12-...|{52315, , 12347, ...|\n",
+      "+------+---------------+----------+--------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfdata1.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "7fa0a9a5-f1d6-4f15-a834-5b1e59044fb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfdata2 = dfdata1.select(\"instid\",\"instname\", \"inststatus\", col(\"pathdet1.docid\").alias(\"docid\"),col(\"pathdet1.workitemid\").alias(\"workitemid\"),\n",
+    "    col(\"pathdet1.username\").alias(\"username\"), col(\"pathdet1.startdate\").alias(\"startdate\"),col(\"pathdet1.enddate\").alias(\"enddate\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "34e060f7-6000-4df9-a2ba-cf5bda352729",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- instid: long (nullable = true)\n",
+      " |-- instname: string (nullable = true)\n",
+      " |-- inststatus: string (nullable = true)\n",
+      " |-- docid: long (nullable = true)\n",
+      " |-- workitemid: long (nullable = true)\n",
+      " |-- username: string (nullable = true)\n",
+      " |-- startdate: string (nullable = true)\n",
+      " |-- enddate: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfdata2.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "3a352b20-5880-4a2d-850c-de41442e4a61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+---------------+----------+-----+----------+--------+-------------------+-------------------+\n",
+      "|instid|       instname|inststatus|docid|workitemid|username|          startdate|            enddate|\n",
+      "+------+---------------+----------+-----+----------+--------+-------------------+-------------------+\n",
+      "| 12345|789654123125485|  Released|52312|       235|     dex|2017-12-01 15:05:23|2017-12-01 15:05:56|\n",
+      "| 12345|789654123125485|  Released|52312|       236|     dex|2017-12-01 15:05:56|2017-12-01 15:06:23|\n",
+      "| 12345|789654123125485|  Released|52312|       238|     mhx|2017-12-01 15:06:23|2017-12-01 15:06:45|\n",
+      "| 12347|789654123135452|   Pending|52315|       242|     dex|2017-12-01 15:07:45|2017-12-01 15:08:31|\n",
+      "| 12347|789654123135452|   Pending|52315|       244|     dex|2017-12-01 15:08:31|                   |\n",
+      "+------+---------------+----------+-----+----------+--------+-------------------+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfdata2.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "df7bce45-6340-44d6-8ae8-1c3f2c4f91a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person_schema = StructType([\n",
+    "    StructField(\"name\", StringType(), True),\n",
+    "    StructField(\"age\", IntegerType(), True),\n",
+    "    StructField(\"address\", StringType(), True)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "4560e523-8dcc-4019-a862-b38ed16c7fd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    (\"Raja\", 21, \"HYD\"),\n",
+    "    (\"Ramya\", 34, \"BAN\"),\n",
+    "    (\"Rani\", 30, \"MUM\")\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "f96fa7f3-b804-434e-91e1-f8a2633d5aa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = spark.createDataFrame(data, person_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "20a97068-739d-4433-a6e6-60d49e42ff12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+---+-------+\n",
+      "| name|age|address|\n",
+      "+-----+---+-------+\n",
+      "| Raja| 21|    HYD|\n",
+      "|Ramya| 34|    BAN|\n",
+      "| Rani| 30|    MUM|\n",
+      "+-----+---+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "41ca5caa-7864-45b5-8324-9d6149489953",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+---+-------+\n",
+      "| name|age|address|\n",
+      "+-----+---+-------+\n",
+      "|Ramya| 34|    BAN|\n",
+      "| Rani| 30|    MUM|\n",
+      "+-----+---+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.filter(\"age > 25\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f9ed0cb-004e-47d6-bbf9-2bf0001af6bd",
+   "metadata": {},
+   "source": [
+    "## Converting dataframe to dataset \n",
+    "Python does not support Datasets but only supports datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "2c5427ec-b723-47c3-b09a-2fe3ef47677a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = spark.read.json(\"file:///C:/Users/aksha/Pyspark/InputData.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "9d60df22-46ad-4d44-9e7a-51c8c89de9f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Address', 'Age', 'Desg', 'State', 'YrsOfExp', 'name']"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "a1926c54-1cdc-4f79-8555-0e9db438ec8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "e9b7705d-ed19-4083-8f8b-4ff62eb1adc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Address', 'Age', 'Desg', 'State', 'YrsOfExp', 'name']"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a4b3a6dd-af56-4999-a1c5-afc3aee5852f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+----+--------------+-------------+--------+------------+\n",
+      "|    Address| Age|          Desg|        State|YrsOfExp|        name|\n",
+      "+-----------+----+--------------+-------------+--------+------------+\n",
+      "|  Hyderabad|NULL|           STA|    Telangana|    12.5|       Gopal|\n",
+      "|  Bangalore|   6|          NULL|    Karnataka|    NULL|     Mounika|\n",
+      "|    Chennai|  22|   Sw Engineer|    TamilNadu|     1.2|       Ramya|\n",
+      "|  Hyderabad|NULL|            TA|    Telangana|    12.5|      Sekhar|\n",
+      "|  Bangalore|  12|          NULL|    Karnataka|    NULL|      Reshma|\n",
+      "|       Pune|  22|   Sw Engineer|   Maharastra|     1.2|       Ramya|\n",
+      "|  Hyderabad|NULL|Senior Analyst|    Telangana|     9.5| Ravichandra|\n",
+      "|  Bangalore|  18|          NULL|    Karnataka|    NULL|     Meghana|\n",
+      "|      Delhi|  22|   Sw Engineer|        Delhi|     1.2|      Ravali|\n",
+      "|  Hyderabad|NULL|           STA|    Telangana|    12.5| MahaLakshmi|\n",
+      "|  Bangalore|   6|          NULL|    Karnataka|    NULL|SouravMishra|\n",
+      "|     Indore|  22|   Sw Engineer|MadhyaPradesh|     1.2|       Ramya|\n",
+      "|  Hyderabad|NULL|           STA|    Telangana|    12.5|       Gopal|\n",
+      "|  Bangalore|  34|          NULL|    Karnataka|    NULL|     Mounika|\n",
+      "|    Chennai|  22|   Sw Engineer|AndhraPradesh|     1.2|       Ramya|\n",
+      "|  Hyderabad|NULL|           STA|    Telangana|    12.5|       Gopal|\n",
+      "|  Hyderabad|  40|          NULL|    Telangana|    NULL|     Raghava|\n",
+      "|    Chennai|  32|          NULL|    Telangana|    NULL|       Raaji|\n",
+      "|   Warangal|NULL|           STA|    Telangana|    12.5|       Gopal|\n",
+      "|Tiruvendram|  38|          NULL|       Kerala|    NULL|   Mahildhar|\n",
+      "+-----------+----+--------------+-------------+--------+------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ef91ca7-6077-4c0d-8324-ebe66c5c7ef3",
    "metadata": {},
    "outputs": [],
    "source": []
